Fix overflow

--- a/popup/src/components/Main/styles.scss
+++ b/popup/src/components/Main/styles.scss
@@ -8,7 +8,8 @@
   height: 136px + 24px;
   min-height: 136px;
 
-  padding: 8px;
+  padding: 4px;
+  padding-bottom: 5px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 
@@ -16,10 +17,15 @@
 
   overflow: hidden;
 
-  transition: height .2s ease;
+  transition: height 0.2s ease;
 
   &._compact {
     height: 136px !important;
+  }
+
+  .Input,
+  .BanList_users {
+    margin: 4px;
   }
 }
 
@@ -45,8 +51,8 @@
 
   height: 32px;
   gap: 8px;
-  margin-bottom: 6px;
-  border-radius: 6px;
+  // margin-bottom: 8px;
+  border-radius: 8px;
 
   box-shadow: 0 0 0 1px var(--colorSeparatorSecondary);
 
@@ -80,9 +86,10 @@
     padding-left: 32px;
     padding-right: 64px;
     border: 0;
-    border-radius: 6px;
+    border-radius: 8px;
 
     background-color: var(--colorFieldBackground);
+    color: var(--colorTextPrimary);
 
     outline: none;
 
@@ -107,15 +114,15 @@
 
   width: 32px;
   height: 32px;
-  border-radius: 6px;
+  border-radius: 8px;
 }
 
 .InputSubButton_clearBanList {
-  background-color: var(--colorBackgroundNegativeTint);
+  background-color: var(--colorBackgroundNegative);
   box-shadow: 0 0 0 1px var(--colorStrokeNegative);
 
   .IconButton {
-    fill: var(--colorIconNegative);
+    fill: var(--colorIconContrast);
   }
 }
 
@@ -129,17 +136,14 @@
 }
 
 .BanList {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 4px;
-
+  overflow-y: auto;
   width: 100%;
   height: 100%;
-  overflow: aut;
-
+  border-radius: 8px;
   .BanList_empty {
     display: inline-flex;
     width: 100%;
+    height: 100%;
     overflow: hidden;
 
     color: var(--colorTextSecondary);
@@ -147,6 +151,12 @@
     align-items: center;
 
     font-size: 16px;
+  }
+
+  .BanList_users {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
   }
 }
 
@@ -157,12 +167,12 @@
 
   height: 32px;
 
-  padding: 6px 8px;
-  border-radius: 6px;
-  gap: 6px;
+  padding: 8px 8px;
+  border-radius: 8px;
+  gap: 8px;
 
-  background-color: var(--colorBackgroundAccentThemed);
-  box-shadow: 0 0 0 1px var(--colorStrokeAccentThemed);
+  background-color: var(--colorBackgroundAccent);
+  box-shadow: 0 0 0 1px var(--colorStrokeAccent);
 
   .UserID-Text_id {
     font-family: "Roboto";
@@ -171,11 +181,11 @@
     font-size: 15px;
     line-height: 20px;
 
-    color: var(--colorTextContrastThemed);
+    color: var(--colorTextContrast);
   }
 
   .UserID-Button_delete {
-    fill: var(--colorIconContrastThemed);
+    fill: var(--colorIconContrast);
   }
 }
 
@@ -185,9 +195,14 @@
   justify-content: space-between;
 
   position: absolute;
+  margin-left: 8px;
+  margin-right: 8px;
+  left: 0;
+  right: 0;
+  text-align: center;
   bottom: 8px;
 
-  gap: 6px;
+  gap: 8px;
   height: 32px;
   padding: 8px;
   border-radius: 8px;
@@ -195,15 +210,14 @@
   box-shadow: 0 0 0 1px var(--colorStrokeNegative);
   background-color: var(--colorBackgroundNegativeTint);
 
+  transition: all 1s ease;
+
   .Error-Text {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-  }
-
-  .Error-Button {
   }
 
   .Error-Button_delete {
@@ -216,6 +230,7 @@
   flex-direction: column;
 
   overflow-y: auto;
+  border-radius: 8px;
 }
 
 .Setting {
